# simple-redis

./: Cargo.toml  README.md  redis-protocol.md
src/: context.rs  error.rs  executor.rs  lib.rs  main.rs  stream_handler.rs
src/command/: append.rs  command_executor.rs  del.rs  exist.rs  expire.rs  get.rs  hello.rs  mod.rs  ping.rs  set.rs
src/command/parser/: get_parser.rs  mod.rs  set_parser.rs
src/datatype/: hashes.rs  lists.rs  mod.rs  op.rs  redis_list.rs  sets.rs  sorted_sets.rs  strings.rs
src/resp/: arrays.rs  big_numbers.rs  bulk_errors.rs  bulk_strings.rs  codec.rs  integers.rs  maps.rs  mod.rs  nulls.rs  pushes.rs  simple_errors.rs  simple_strings.rs  verbatim_strings.rs
src/resp/codec/: decode.rs  encode.rs  mod.rs
src/resp/frame/: decode.rs  encode.rs  mod.rs
src/storage/: file.rs  mem.rs  mod.rs
