[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
once_cell = "1.19"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.167"

tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
tracing-appender = "0.2.3"
nonempty-collections = "0.2.5"
derive_builder = "0.20.0"
bytes = "1.6.0"
tokio-util = {version = "0.7.11", features = ["codec"]}
tokio-stream = "0.1.15"
num = "0.4.3"
dashmap = "5.5.3"
futures = "0.3.30"
