[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tokio-util = {version = "0.7.11", features = ["codec"]}
tokio-stream = "0.1.15"
futures = "0.3.30"

nom = "7.1.3"
thiserror = "1.0.61"
bytes = "1.6.0"
num = "0.4.3"
dashmap = "5.5.3"
once_cell = "1.19"
nonempty-collections = "0.2.5"
derive_builder = "0.20.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.167"

tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
tracing-appender = "0.2.3"
anon_enum = "1.1.0"
itertools = "0.13.0"

strum = { version = "0.26", features = ["derive"] }


